# spirit-po

./: .gitignore  .travis.yml  Makefile  README.md  TODO.md  appveyor.yml  find_and_replace.sh
include/: spirit_po.hpp
include/spirit_po/: catalog.hpp  catalog_metadata.hpp  default_plural_forms.hpp  default_plural_forms_compiler.hpp  default_plural_forms_expressions.hpp  exceptions.hpp  plural_forms_compiler.hpp  po_grammar.hpp  po_message.hpp  po_message_adapted.hpp  po_message_helper.hpp  spirit_po.hpp  version.hpp
src/: main.cpp  test1.po  test2.po  test3.po  test4.po  test5.po  test6.po  test_fail1.po  test_fail2.po  test_fail3.po  test_fail4.po  test_fail5.po  test_fail6.po  test_fail7.po  test_fail8.po
test/: Jamroot.jam  Makefile  main.cpp  test.sh  test10.po  test11.po  test12.po  test2.po  test3.po  test7.po  test8.po  test9.po  test_fail1.po  test_fail10.po  test_fail11.po  test_fail2.po  test_fail3.po  test_fail8.po  test_fail9.po
test_libintl/: CMakeLists.txt  Jamroot.jam  gettext.h  main.cpp  test.sh
test_libintl/po/: anjuta-extras-gnome-3-2-th.po  atomix-gnome-3-18-et.po  atomix-gnome-3-18-eu.po  balsa-master-zh_HK.po  banshee-stable-2_6-de.po  baobab-master-gd.po  brasero-master-en@shaw.po  brasero-master-zh_CN.po  caribou-master-bg.po  cheese-master-zh_CN.po  clutter-master-hi.po  cups-pk-helper-master-ia.po  damned-lies-master-sv.po  dasher-master-ps.po  ekiga-v4_0-ar.po  empathy-master-ko.po  empathy-master-zu.po  eog-master-ts.po  evince-master-ks.po  evolution-data-server-master-uk.po  evolution-master-ko.po  evolution-master-nds.po  folks-master-ja.po  for_use_0ad_public-gui-gamesetup_de.po  for_use_GNU_Health_health_calendar_es_EC.po  for_use_GNU_Health_health_calendar_es_PE.po  for_use_GNU_Health_health_crypto_es_EC.po  for_use_GNU_Health_health_genetics_es_PE.po  for_use_GNU_Health_health_genetics_fr_FR.po  for_use_GNU_Health_health_gyneco_de_AT.po  for_use_GNU_Health_health_gyneco_es_EC.po  for_use_GNU_Health_health_history_fr_FR.po  for_use_GNU_Health_health_imaging_es_PE.po  for_use_GNU_Health_health_inpatient_de_AT.po  for_use_GNU_Health_health_lab_de_AT.po  for_use_GNU_Health_health_lifestyle_es_VE.po  for_use_GNU_Health_health_lifestyle_fr_FR.po  for_use_GNU_Health_health_pediatrics_es_VE.po  for_use_GNU_Health_health_socioeconomics_fr_FR.po  for_use_MATE_mate-desktop_da.po  (+85 more)
util/: Makefile  inspector.cpp
